--- a/app/client/main.html
+++ b/app/client/main.html
@@ -4,6 +4,6 @@
   <title>meteor-application-template</title>
 </head>
 
-<body style="background-color: #25A99E">
+<body style="background-color: #000">
   <div id="root"></div>
 </body>
