--- a/app/client/main.html
+++ b/app/client/main.html
@@ -5,6 +5,6 @@
   <link rel="shortcut icon" type="image/x-icon" href="https://avatars3.githubusercontent.com/u/38032619?s=400&u=6d7f99a186f618d99deac1e60e22a1f75cfcba77&v=4" />
 </head>
 
-<body style="background-color: #000">
+<body style="background-color: #FFF">
   <div id="root"></div>
 </body>
