--- a/app/client/main.html
+++ b/app/client/main.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Hale-Manoa</title>
-  <link rel="shortcut icon" type="image/x-icon" href="https://avatars3.githubusercontent.com/u/38032619?s=400&u=6d7f99a186f618d99deac1e60e22a1f75cfcba77&v=4" />
+  <link rel="shortcut icon" type="image/x-icon" href="https://github.com/hale-manoa/hale-manoa/blob/master/app/public/images/halemanoa-icon-transparent.png?raw=true" />
 </head>
 
 <body style="background-color: #FFF">
