--- a/app/client/main.html
+++ b/app/client/main.html
@@ -3,6 +3,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Hale-Manoa</title>
   <link rel="shortcut icon" type="image/x-icon" href="https://avatars3.githubusercontent.com/u/38032619?s=400&u=6d7f99a186f618d99deac1e60e22a1f75cfcba77&v=4" />
+  <link href="https://fonts.googleapis.com/css?family=Fira+Sans">
+  <link href="https://fonts.googleapis.com/css?family=Black+Han+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
 </head>
 
 <body style="background-color: #FFF">
