Preliminary styling done. May change upon group review

--- a/app/client/main.html
+++ b/app/client/main.html
@@ -10,6 +10,6 @@
   <link rel="shortcut icon" type="image/x-icon" href="https://github.com/hale-manoa/hale-manoa/blob/master/app/public/images/halemanoa-icon-transparent.png?raw=true" />
 </head>
 
-<body style="background-color: #FFF">
+<body style="background-image: url(images/house-pattern.jpg);">
   <div id="root"></div>
 </body>
